feat: Add royal spices pixel code

--- a/src/index.html
+++ b/src/index.html
@@ -41,15 +41,14 @@
         "script",
         "https://connect.facebook.net/en_US/fbevents.js"
       );
-      fbq("init", "640547473219706");
+      fbq("init", "343284870399229");
       fbq("track", "PageView");
     </script>
-    <noscript
-      ><img
+    <noscript>
+      <img
         height="1"
         width="1"
-        style="display:none"
-        src="https://www.facebook.com/tr?id=640547473219706&ev=PageView&noscript=1"
+        src="https://www.facebook.com/tr?id=343284870399229&ev=PageView&noscript=1"
     /></noscript>
     <!-- End Facebook Pixel Code -->
   </head>
